--- a/Orders2/Orders2.Backend/appsettings.json
+++ b/Orders2/Orders2.Backend/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Orders;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "DefaultConnection": "Server=DESKTOP-24VBDT7;Database=Orders2;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+        "AzureStorage": "F:\\App\\Orders-Images"
+        //"DefaultConnection": "Server=orestes-pc\\PRAGMA;Database=Orders;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+        //"AzureStorage": "E:\\App\\Orders\\AzureStorage"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
