--- a/Orders2/Orders2.Backend/Orders2.Backend.csproj
+++ b/Orders2/Orders2.Backend/Orders2.Backend.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\Orders2.Shared\Orders2.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\CountriesStatesCities.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
