--- a/Orders2/Orders2.Frontend/Orders2.Frontend.csproj
+++ b/Orders2/Orders2.Frontend/Orders2.Frontend.csproj
@@ -9,5 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="MudBlazor" Version="8.11.0" />
+    <PackageReference Include="System.Net.Http" Version="4.1.0" />
   </ItemGroup>
 </Project>
